Update user guide

--- a/manual/sec_vpn.html
+++ b/manual/sec_vpn.html
@@ -42,7 +42,7 @@
       SMS users even your enemies know your SMS sites.<br> 
       <br>
       There are three ways to build a secure connection. They are virtual private network (VPN), Tor browser (Tor network), and public available WiFi
-      connections. In general, public available WiFi hotspots are considered insecure, then why can they be used? Because 'secure' in here also means
+      connections. In general, public available WiFi hotspots are considered insecure, then why should they be used? Because 'secure' in here also means
       anonymity.<br>
       <br>
       <b><u>Virtual Private Network (VPN)</u></b><br>
@@ -211,13 +211,13 @@
   <tr>
     <td class=content>
       <b><u>Public WiFi Hotspot</u></b><br>
-      Public available WiFi hotspot is usually an insecure place (see <a href="https://thevpn.guru/public-wifi-hotspot-threat-privacy">this article</a> for details).
+      Public available WiFi hotspots are usually insecure places (see <a href="https://thevpn.guru/public-wifi-hotspot-threat-privacy">this article</a> for details).
       However, if you take all the precautions, you could still keep yourself anonymity and safety.<br>
       <br>
       Although public WiFi hotspot can't expose your true identity directly, your trackers still have many ways to correlate indirect data to identify yourself.
       For example, coffee cafes usually provide public WiFi access, and those places also commonly have CCTV monitoring. Your face on CCTV timeline, and internet
       activities log on the public WiFi router, could let secret police narrow down who is the right person they target. Therefore, the following tips are for you as
-      using public WiFi hotspot: <br>
+      using public WiFi hotspots: <br>
       <br>
       <table width=100% cellspacing=1 cellpedding=1>
       <tr>
@@ -251,8 +251,8 @@
       <tr>
         <td width=10px valign=top>4.</td>
         <td>
-          Activate the firewall on your device, and disable all sharing on your device. For mobile devices, also disable blue tooth, NFC and any other remote
-          connection ways except your WiFi card. 
+          Activate firewall and disable all sharing on your device. For mobile devices, also disable blue tooth, NFC and any other remote connection ways
+          except your WiFi card. 
         </td>
       </tr>      
       </table>
