Update SMS installation guide

--- a/manual/install_guide.html
+++ b/manual/install_guide.html
@@ -23,8 +23,22 @@
       <table width=100% class=table cellspacing=1 cellpadding=1>
       <tr>
         <td valign=top> - </td>
-        <td>Decompress SMS server installation package: <b><font color='darkblue'>tar -xzvf sms_server_1_0.tgz</font></b></td>
+        <td>
+          Download SMS server installation package from GitHub either:<br>
+          <table width=100% class=table cellspacing=1 cellpadding=1>
+          <tr>
+            <td valign=top nowrap>(1) </td>
+            <td>Use Git to clone the project on your computer by issue command on a terminal: <b>git clone https://github.com/dw999/sms.git</b></td>
+          </tr>          
+          <tr><td colspan=2>&nbsp;</td></tr>          
+          <tr>
+            <td valign=top nowrap>(2) </td>
+            <td>Download a zipped archive named sms_master.zip from https://github.com/dw999/sms, and then decompress it with command: <b>unzip sms_master.zip</b></td>
+          </tr>          
+          </table>  
+        </td>
       </tr>
+      <tr><td colspan=2>&nbsp;</td></tr>      
       <tr>
         <td valign=top> - </td>
         <td>Make sure all installation shell scripts are executable: <b><font color='darkblue'>chmod +x *.sh</font></b> and <b><font color='darkblue'>chmod +x ffmpeg/*.sh</font></b></td>
