1. Add Ubuntu 18.04 as supported platform, 2. Use bash explicitly on SMS installation scripts to solve compatibility issue between different platforms

--- a/manual/install_guide.html
+++ b/manual/install_guide.html
@@ -64,7 +64,7 @@
       </tr>
       <tr>
         <td valign=top> - </td>
-        <td>Network connection of your CentOS Linux server is well configured and fast enough (> 1Mb/s).</td>
+        <td>Network connection of your CentOS or Ubuntu Linux server is well configured and fast enough (> 1Mb/s).</td>
       </tr>
       <tr>
         <td valign=top> - </td>
@@ -79,9 +79,12 @@
         <td>You have registered at least one Gmail account for SMS operations. (Note: It MUST be Gmail account) However, if Gmail is blocked by your local government, see Figure 11 for work-around.</td>
       </tr>      
       </table>
+      <br>
+      <b>Note:</b><br>
+      This guide is based on CentOS 7 environment, but it could also be applied to other supported platforms. 
     </td>
   </tr>
-    
+      
   <tr><td colspan=2>&nbsp;</td></tr>
 
   <tr>
@@ -97,7 +100,7 @@
       Login Linux server as super user, open a terminal window, and go to the directory where decompressed SMS server installation
       packages located, then execute installation script:<br>
       <br>
-      # <font color='darkblue'><b>./install_sms_centos.sh</b></font><br>
+      # <font color='darkblue'><b>./install_sms.sh</b></font><br>
       <br>
       Screen like Figure 1 will be displayed. You may now press enter to start SMS server installion.
     </td>
