--- a/manual/what_is_sms.html
+++ b/manual/what_is_sms.html
@@ -31,7 +31,7 @@
       SMS stands for Secret Messaging System. Just like Whatsapp, Telegram and Signal, it is a instant messaging system, but not like any of
       them, SMS is a pure web application and runs on all modern web browsers which support HTML5. Since it is a web application, any platform
       with HTML5 supported web browser can be used to access SMS, such as smartphones, tablets, laptop computers and desktop computers. Further more,
-      you totally control both client and server side. It means that you need to install and manage your SMS server yourself.<br>
+      you totally control both client and server side. It means that you need to install and manage SMS server yourself.<br>
       <br>
       You may wonder there are so many free and excellent instant messaging apps out there, why this world needs one more web based instant messaging system?
       Before answer this question, may I ask all of you one question? Is any instant messaging application designed from the ground up for those users who need
