Revise user guide

--- a/manual/sec_vpn.html
+++ b/manual/sec_vpn.html
@@ -34,7 +34,7 @@
       <br>
       As you may have already known that all the communication between the users and the SMS server is via SSL (i.e. https protocol), a quite secure way
       to use strong encryption method to protect your sent messages content, which avoid anyone to intercept your secret. Then why we still need an additional
-      secure connection? The reason is that your counter part are not script kiddies, but a gang of state supported and well equipped professional hackers.
+      secure connection? The reason is that your counter parts are not script kiddies, but a gang of state supported and well equipped professional hackers.
       Even your ISP will help them to monitor your cyber activities if they request for it. So, they may not get your messages content easily, but they can
       certainly get your SMS sites DNS names and IP address easily if you don't take further steps to hide them. Once they know your SMS sites, they
       can track all connected IP addresses to these sites. If SMS users don't connect to the SMS server with secure connections, their true identities can be
