--- a/manual/sec_your_device.html
+++ b/manual/sec_your_device.html
@@ -33,16 +33,9 @@
       <br>
       Before go into smartphone selection and hardening discussion, you should be told the best practice principles of your device for SMS communication.<br>
       <br>
-      Firstly, you must remember that the device (no matter phone or computer) you used to connect the SMS server, should not be used for your daily life. i.e. You must
-      isolate your daily life (which point to your true identity) from your SMS related activities. So, you should better have at least two devices, one for your daily
-      usage, another is strictly for SMS communication or other secret tasks.<br>
-      <br>
-      Secondly, let's consider the best practice on device usage and web browser usage on different SMS connection modes (see section 1.2 Four connection modes of SMS).
-      If you use connection mode 0 or 3, you will login on decoy site and switch to decoy site afterward, you need to read your email to get messaging site access link
-      to go to messaging site. Therefore, the best practice is to separate these operations on two different smartphones. Let say phone A and phone B. i.e. You login SMS
-      with phone A, then use phone B to read the access email and go to the messaging site. However, carrying two phones may be inconvenient or impossible, but you should
-      still separate operations on two different web browsers. Let say you use Google Chrome to login to the decoy site of your SMS server, then use Firefox to access your
-      email and switch to the messaging site. For connection mode 1 and 2, please use Firefox to access both the decoy site and the messaging site.<br>
+      You must remember that the device (no matter phone or computer) you used to connect the SMS server, should not be used for your daily life. i.e. You must isolate 
+      your daily life (which point to your true identity) from your SMS related activities. So, you should better have at least two devices, one for your daily usage,
+      another is strictly for SMS communication or other secret tasks.<br>
       <br>
       Now, you should determine how to select a secure smartphone. Below is a guideline about it:<br>
       <br>
