Correct a grammatical error

--- a/manual/what_is_sms.html
+++ b/manual/what_is_sms.html
@@ -28,7 +28,7 @@
   
   <tr>
     <td class=content>
-      SMS stands for Secret Messaging System. Just like Whatsapp, Telegram and Signal, it is a instant messaging system, but not like any of
+      SMS stands for Secret Messaging System. Just like Whatsapp, Telegram and Signal, it is an instant messaging system, but unlike any of
       them, SMS is a pure web application and runs on all modern web browsers which support HTML5. Since it is a web application, any platform
       with HTML5 supported web browser can be used to access SMS, such as smartphones, tablets, laptop computers and desktop computers. Further more,
       you totally control both client and server side. It means that you need to install and manage SMS server yourself.<br>
