Correct user manual

--- a/manual/sec_vpn.html
+++ b/manual/sec_vpn.html
@@ -214,7 +214,7 @@
       Public available WiFi hotspots are usually insecure places (see <a href="https://thevpn.guru/public-wifi-hotspot-threat-privacy">this article</a> for details).
       However, if you take all the precautions, you could still keep yourself anonymity and safety.<br>
       <br>
-      Although public WiFi hotspot can't expose your true identity directly, your trackers still have many ways to correlate indirect data to identify yourself.
+      Although public WiFi hotspot can't expose your true identity directly, your trackers still have many ways to correlate indirect data to identify you.
       For example, coffee cafes usually provide public WiFi access, and those places also commonly have CCTV monitoring. Your face on CCTV timeline, and internet
       activities log on the public WiFi router, could let secret police narrow down who is the right person they target. Therefore, the following tips are for you as
       using public WiFi hotspots: <br>
