User manual review

--- a/manual/sec_vpn.html
+++ b/manual/sec_vpn.html
@@ -50,20 +50,20 @@
       provider knows your true IP address (and hence your true identity), and all your cyber activities if he wants to monitor you. Therefore, how to choose
       your VPN provider is very important for your safety. The basic principles are:<br>
       <br>
-      <table width=100% cellspacing=1 cellpedding=1>
+      <table class=table width=100% cellspacing=1 cellpedding=1>
       <tr>
-        <td width=10px valign=top>1.</td>
-        <td>
+        <td class=content width=10px valign=top>1.</td>
+        <td class=content>
           If you need to hide yourself from your local government, don't subscribe those VPN providers that your local government's jurisdiction can be 
           applied to them.
         </td>
       </tr>
 
-      <tr><td colspan=2>&nbsp;</td></tr>
+      <tr><td class=content colspan=2>&nbsp;</td></tr>
 
       <tr>
-        <td width=10px valign=top>2.</td>
-        <td>
+        <td class=content width=10px valign=top>2.</td>
+        <td class=content>
           If it is possible, use free VPN services. Although freely available VPN services have many disadvantages, they could provide one more layer of
           anonymity for you. They don't have your payment record, and payment record can be used to identify a person. However, you should remember, free
           VPN providers still know your true IP address, and your cyber activities. So, rule number 1 must be considered as select your free VPN provider(s).
@@ -75,8 +75,8 @@
       all VPN servers provided by VPN Gate come from volunteers, and some of them are located into the territory of dictatorial regime like China and Russia,
       you should avoid those VPN servers. Table 5.1.1 shows you the brief steps to install and use VPN Gate service on varied platforms. <br>
       <br>
-      <table width=100% cellspacing=1 cellpedding=1 border=1>
-      <tr style="background-color:lightblue">
+      <table class=table width=100% cellspacing=1 cellpedding=1 border=1>
+      <tr class=content style="background-color:lightblue">
         <td align=center><b>Platform</b></td>
         <td align=center><b>Installation & Usage</b></td>
       </tr>
@@ -161,8 +161,8 @@
       support five platofrms. They are MS Windows, MacOS X, Linux, OpenBSD and Android. Tor browser installation on MS Windows and Linux are quite straightforward, just
       decompress the download archive and run it. Table 5.1.2 summarize some tips for Tor Browser installation and usage you should know about.<br>
       <br>
-      <table width=100% cellspacing=1 cellpedding=1 border=1>
-      <tr style="background-color:lightblue">
+      <table class=table width=100% cellspacing=1 cellpedding=1 border=1>
+      <tr class=content style="background-color:lightblue">
         <td align=center width=20px><b>#</b></td>
         <td align=center><b>Tips</b></td>
       </tr>
@@ -219,38 +219,38 @@
       activities log on the public WiFi router, could let secret police narrow down who is the right person they target. Therefore, the following tips are for you as
       using public WiFi hotspots: <br>
       <br>
-      <table width=100% cellspacing=1 cellpedding=1>
+      <table class=table width=100% cellspacing=1 cellpedding=1>
       <tr>
-        <td width=10px valign=top>1.</td>
-        <td>
+        <td class=content width=10px valign=top>1.</td>
+        <td class=content>
           Don't hang on same public WiFi hotspot frequently or regularly.  
         </td>
       </tr>
 
-      <tr><td colspan=2>&nbsp;</td></tr>
+      <tr><td class=content colspan=2>&nbsp;</td></tr>
       
       <tr>
-        <td width=10px valign=top>2.</td>
-        <td>
+        <td class=content width=10px valign=top>2.</td>
+        <td class=content>
           To cover your face, a cap / sunglasses / surgical mask is helpful. Don't dress too outstanding, and don't wear attractive accessories. You must keep yourself
           low profile.   
         </td>
       </tr>
 
-      <tr><td colspan=2>&nbsp;</td></tr>
+      <tr><td class=content colspan=2>&nbsp;</td></tr>
       
       <tr>
-        <td width=10px valign=top>3.</td>
-        <td>
+        <td class=content width=10px valign=top>3.</td>
+        <td class=content>
           If it is possible, use VPN or Tor network to protect your internet connection as you are using public WiFi hotspot.   
         </td>
       </tr>
 
-      <tr><td colspan=2>&nbsp;</td></tr>
+      <tr><td class=content colspan=2>&nbsp;</td></tr>
 
       <tr>
-        <td width=10px valign=top>4.</td>
-        <td>
+        <td class=content width=10px valign=top>4.</td>
+        <td class=content>
           Activate firewall and disable all sharing on your device. For mobile devices, also disable blue tooth, NFC and any other remote connection ways
           except your WiFi card. 
         </td>
