--- a/manual/sec_your_device.html
+++ b/manual/sec_your_device.html
@@ -39,8 +39,8 @@
       <br>
       Now, you should determine how to select a secure smartphone. Below is a guideline about it:<br>
       <br>
-      <table width=100% cellspacing=1 cellpedding=1>
-      <tr>
+      <table class=table width=100% cellspacing=1 cellpedding=1>
+      <tr class=content>
         <td width=10px valign=top>1.</td>
         <td>
           Don't use those smartphone brands from dictatorial nations, such as China or Russia. They are long suspected to put surveillance spyware on their manufactured
@@ -71,8 +71,8 @@
       <br>
       After you get your smartphone, you need to harden it as following:<br>
       <br>
-      <table width=100% cellspacing=1 cellpedding=1>
-      <tr>
+      <table class=table width=100% cellspacing=1 cellpedding=1>
+      <tr class=content>
         <td width=10px valign=top>1.</td>
         <td>
           Fully encrypt your phone, and give a long password for it (8 or more characters). Please see
