--- a/manual/sec_email_acct.html
+++ b/manual/sec_email_acct.html
@@ -33,8 +33,8 @@
       <br>
       To harden and hide your email account, below is a best practice guideline: <br>
       <br>
-      <table width=100% cellspacing=1 cellpedding=1>
-      <tr>
+      <table class=table width=100% cellspacing=1 cellpedding=1>
+      <tr class=content>
         <td width=10px valign=top>1.</td>
         <td>
           Don't use email application to access your email account, always use web browser for it. i.e. Your email service must be web accessible, like Gmail,
